# notez2

./: Cargo.toml  DESIGN.md  README.md
app/: README.md  package-lock.json  package.json
app/src/: app.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  dto.rs  github.rs  lib.rs
app/src/lib/: activity.svelte.ts  ipc.ts  mock.ts  repos.svelte.ts  stats.svelte.ts  types.ts
app/src/lib/components/: AttachProjectDialog.svelte  Avatar.svelte  Calendar.svelte  DashboardView.svelte  Inspector.svelte  LogPanel.svelte  MachineAvatar.svelte  MarkdownPreview.svelte  MigrationDialog.svelte  NewNoteDialog.svelte  NoteEditor.svelte  NoteList.svelte  NotesView.svelte  Resizer.svelte  Sidebar.svelte  SpazeView.svelte  TicketzView.svelte  TodozView.svelte  WeatherWidget.svelte
app/src/lib/components/todo/: FilterStrip.svelte  TodoItem.svelte  TodoPreview.svelte
app/src/routes/: +page.svelte
crates/notez-cli/: Cargo.toml
crates/notez-cli/src/: main.rs
crates/notez-cli/src/cli/: mod.rs
crates/notez-cli/src/commands/: add.rs  attach.rs  detach.rs  edit.rs  list.rs  log.rs  mkdir.rs  nav.rs  search.rs  setup.rs  sync.rs  todo.rs  tree.rs
crates/notez-cli/src/tui/: mod.rs  tags.rs  text.rs  theme.rs
crates/notez-core/: Cargo.toml
crates/notez-core/src/: filter.rs  lib.rs  migrate.rs  note_tags.rs  tags.rs
crates/notez-core/src/config/: mod.rs  paths.rs
crates/notez-core/src/core/: aggregate.rs  mod.rs  note.rs  project.rs  scope.rs
crates/notez-core/src/todo/: mod.rs  model.rs
crates/notez-core/src/util/: tools.rs
docs/: multi-user-sync.md
docs/superpowers/plans/: 2026-06-06-melt-ui-refresh.md
docs/superpowers/specs/: 2026-06-06-melt-ui-refresh-design.md
src/: main.rs
src/cli/: mod.rs
src/commands/: add.rs  attach.rs  completions.rs  detach.rs  edit.rs  init.rs  list.rs  log.rs  mkdir.rs  mod.rs  nav.rs  search.rs  setup.rs  sync.rs  todo.rs  tree.rs
src/config/: metadata.rs  registry.rs
src/core/: aggregate.rs  mod.rs  note.rs  project.rs  resolve.rs  scope.rs
src/tui/: filter.rs  mod.rs  tags.rs
src/util/: mod.rs  sanitize.rs  tilde.rs
