[package]
name = "notez-app"
version = "0.1.0"
description = "notez2 desktop app"
authors = ["Gaurgle"]
edition = "2021"
license = "MIT"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# linker constraint, see rust-lang/cargo#8519).
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
window-vibrancy = "0.6"

notez-core = { path = "../../crates/notez-core" }
