[package]
name = "notez-cli"
version = "0.1.0"
edition = "2021"
description = "Local-first CLI note-taking tool, cross-machine portable"
license = "MIT"

[[bin]]
name = "notez"
path = "src/main.rs"

[dependencies]
notez-core = { path = "../notez-core" }

clap = { version = "4", features = ["derive"] }
clap_complete = "4"

dialoguer = "0.11"
rustyline = "15"
console = "0.15"

ratatui = "0.29"
crossterm = "0.28"

anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
dirs = "6"
